// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectBuildingFeatures(offer) Offer 1910572006735216640 1`] = `
Array [
  Object {
    "name": "built_year",
    "source": undefined,
    "year": 2013,
  },
  Object {
    "buildingType": "MONOLIT",
    "name": "building_type",
    "source": undefined,
  },
  Object {
    "name": "floors_total",
    "smart_count": 5,
    "source": undefined,
  },
  Object {
    "formattedHeight": "2,8",
    "height": 2.8,
    "name": "ceiling_height",
    "source": undefined,
  },
  Object {
    "name": "has_lift",
    "source": undefined,
  },
  Object {
    "name": "has_security",
    "source": undefined,
  },
  Object {
    "name": "parking_type",
    "parkingType": "UNDERGROUND",
  },
  Object {
    "name": "no_rubbish_chute",
    "source": undefined,
    "type": "lack_of_feature",
  },
  Object {
    "name": "not_guarded",
    "source": undefined,
    "type": "lack_of_feature",
  },
]
`;

exports[`selectBuildingFeatures(offer) Offer 4178644675543341312 1`] = `
Array [
  Object {
    "buildingType": "BRICK",
    "name": "building_type",
    "source": undefined,
  },
  Object {
    "name": "floors_total",
    "smart_count": 5,
    "source": undefined,
  },
  Object {
    "name": "no_lift",
    "source": "yandex",
    "type": "lack_of_feature",
  },
  Object {
    "name": "no_rubbish_chute",
    "source": "yandex",
    "type": "lack_of_feature",
  },
  Object {
    "name": "parking_type",
    "parkingType": "NONE",
    "type": "lack_of_feature",
  },
]
`;

exports[`selectBuildingFeatures(offer) Offer 5217212054901559809 1`] = `
Array [
  Object {
    "name": "floors_total",
    "smart_count": 6,
    "source": undefined,
  },
]
`;

exports[`selectBuildingFeatures(offer) Offer 5478349734607340288 1`] = `
Array [
  Object {
    "buildingType": "PANEL",
    "name": "building_type",
    "source": undefined,
  },
  Object {
    "name": "floors_total",
    "smart_count": 4,
    "source": undefined,
  },
  Object {
    "name": "parking_type",
    "parkingType": "NONE",
    "type": "lack_of_feature",
  },
]
`;

exports[`selectBuildingFeatures(offer) Offer 6066490924903967463 1`] = `
Array [
  Object {
    "name": "floors_total",
    "smart_count": 8,
    "source": undefined,
  },
]
`;

exports[`selectBuildingFeatures(offer) Offer 6302897158639643935 1`] = `
Array [
  Object {
    "name": "built_year",
    "source": undefined,
    "year": 2020,
  },
  Object {
    "buildingType": "MONOLIT",
    "name": "building_type",
    "source": undefined,
  },
  Object {
    "name": "floors_total",
    "smart_count": 12,
    "source": undefined,
  },
  Object {
    "formattedHeight": "2,6",
    "height": 2.6,
    "name": "ceiling_height",
    "source": undefined,
  },
  Object {
    "name": "has_lift",
    "source": undefined,
  },
  Object {
    "name": "has_rubbish_chute",
    "source": undefined,
  },
]
`;

exports[`selectBuildingFeatures(offer) Offer 7444370360693349120 1`] = `
Array [
  Object {
    "name": "series",
    "seriesId": "И-522",
    "source": "yandex",
  },
  Object {
    "name": "built_year",
    "source": "yandex",
    "year": 1988,
  },
  Object {
    "buildingType": "PANEL",
    "name": "building_type",
    "source": "yandex",
  },
  Object {
    "name": "floors_total",
    "smart_count": 16,
    "source": undefined,
  },
  Object {
    "name": "flats_count",
    "smart_count": 251,
    "source": "yandex",
  },
  Object {
    "name": "porches_count",
    "smart_count": 4,
    "source": "yandex",
  },
  Object {
    "name": "has_lift",
    "source": "yandex",
  },
  Object {
    "name": "has_rubbish_chute",
    "source": "yandex",
  },
  Object {
    "heatingType": "CENTRAL",
    "name": "heating_type",
    "source": "yandex",
  },
]
`;

exports[`selectBuildingFeatures(offer) Offer 7825327396047447809 1`] = `
Array [
  Object {
    "name": "series",
    "seriesId": "П-3М",
    "source": "yandex",
  },
  Object {
    "name": "built_year",
    "source": undefined,
    "year": 2007,
  },
  Object {
    "buildingType": "PANEL",
    "name": "building_type",
    "source": undefined,
  },
  Object {
    "name": "floors_total",
    "smart_count": 23,
    "source": undefined,
  },
  Object {
    "name": "flats_count",
    "smart_count": 792,
    "source": "yandex",
  },
  Object {
    "name": "porches_count",
    "smart_count": 9,
    "source": "yandex",
  },
  Object {
    "formattedHeight": "2,64",
    "height": 2.64,
    "name": "ceiling_height",
    "source": "yandex",
  },
  Object {
    "name": "has_lift",
    "source": undefined,
  },
  Object {
    "name": "has_rubbish_chute",
    "source": undefined,
  },
  Object {
    "name": "no_security",
    "source": "yandex",
    "type": "lack_of_feature",
  },
  Object {
    "name": "parking_type",
    "parkingType": "NONE",
    "type": "lack_of_feature",
  },
]
`;

exports[`selectBuildingFeatures(offer) Offer 8108045632893637377 1`] = `
Array [
  Object {
    "name": "floors_total",
    "smart_count": 18,
    "source": undefined,
  },
]
`;

exports[`selectBuildingFeatures(offer) Offer 8355282261759501312 1`] = `
Array [
  Object {
    "name": "series",
    "seriesId": "II-49",
    "source": "yandex",
  },
  Object {
    "name": "built_year",
    "source": undefined,
    "year": 1974,
  },
  Object {
    "buildingType": "PANEL",
    "name": "building_type",
    "source": undefined,
  },
  Object {
    "name": "floors_total",
    "smart_count": 9,
    "source": undefined,
  },
  Object {
    "name": "flats_count",
    "smart_count": 657,
    "source": "yandex",
  },
  Object {
    "name": "porches_count",
    "smart_count": 8,
    "source": "yandex",
  },
  Object {
    "name": "has_lift",
    "source": undefined,
  },
  Object {
    "name": "has_rubbish_chute",
    "source": undefined,
  },
  Object {
    "heatingType": "CENTRAL",
    "name": "heating_type",
    "source": "yandex",
  },
  Object {
    "name": "no_security",
    "source": undefined,
    "type": "lack_of_feature",
  },
  Object {
    "name": "parking_type",
    "parkingType": "NONE",
    "type": "lack_of_feature",
  },
]
`;
